@@ -8,6 +8,7 @@
   "factorio_version": "2.0",
   "dependencies": [
     "base >= 2.0.0",
-    "energy-combinator >= 1.1.1"
+    "energy-combinator >= 1.1.1",
+    "? SchallCircuitGroup >= 2.0.0"
   ]
 }
