@@ -1,3 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: ????
+  Changes:
+    - [item=power-combinator] Move to circuit-input subgroup if SchallCircuitGroup is installed.
+    - [item=power-combinator-MK2] Move to circuit-input subgroup if SchallCircuitGroup is installed.
